services.yaml
apiVersion: v1
kind: Service
metadata:
  name: app1-service
  namespace: app
spec:
  type: NodePort
  selector:
    app: app1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: app2-service
  namespace: app
spec:
  type: NodePort
  selector:
    app: app2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
